@startuml
'https://plantuml.com/class-diagram




class CenterOfMassVessel{
-length
-width
-height
-proaLength
-proaHeight
-popaLength
-popaHeight
-baseEstruturalLength
-baseEstruturalHeight
-torreLength
-torreHeight
-MATERIAL_DENSITY
-centerOfMassX
-centerOfMass
+centerOfMass()
+CenterOfMassVessel()
+calculateCenterOfMassX()
+calculateCenterOfMassY()
}



class US418Controller{
-company
-containerStore
+centerOfMass()
}



class WriteTxt{
+writetxt()
}



US418Controller..>CenterOfMassVessel

US418Controller ..> WriteTxt


@enduml
